fixed scrollbar colors

--- a/LeftHandle/css/left.css
+++ b/LeftHandle/css/left.css
@@ -11,6 +11,7 @@ body {
     height: 100%;
     margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 #RegionHandle {
@@ -21,7 +22,12 @@ body {
 	width: 100%;
 	height: 100%;
 }
-
+#RegionHandle>ul {
+	overflow: scroll;
+	overflow-x: hidden;
+	scrollbar-color: rgb(204,214,244) #0e0e16;
+	scrollbar-gutter: stable both-edges;
+}
 
 @media (max-aspect-ratio: 1) {
 
