--- a/css/format.css
+++ b/css/format.css
@@ -12,6 +12,8 @@ body {
     height: 100%;
     margin: 0;
 	padding: 0;
+	overflow-x: hidden;
+	scrollbar-color: rgb(204,214,244) #1e1e2e;
 }
 #Items {
     display: flex;
@@ -25,7 +27,8 @@ ul {
 	flex-direction: column;
 }
 p {
-	margin: 0;
+	margin: 0px;
+	padding: 0px;
 }
 a {
     display: flex;
